# healthcare

./: .env.example  .gitignore  CLAUDE.md  PRD.md  e2e-test-report.md  pyproject.toml
app/: Home.py
app/pages/: 1_Upload.py  2_Review_Data.py  3_Mood_Entry.py  4_Chat.py  5_Generate_Report.py
docs/plans/: 2026-02-24-healthcare-report-assistant-design.md  phase-2-pdf-parsing-data-review.md
docs/samples/: mood_intake_2026-02-18_to_2026-02-22.md  report_2026-02-18_to_2026-02-22.md
src/: models.py  pdf_parser.py  storage.py
tests/: test_models.py  test_pdf_parser.py  test_storage.py
