[project]
name = "healthcare-report-assistant"
version = "0.1.0"
description = "Streamlit app to compile glucose and mood data into healthcare reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "pdfplumber>=0.11.0",
    "reportlab>=4.0",
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
]
